Curve edit points disappears whenever the deformed curve is out of view area #69687

Closed
opened 2019-09-09 20:23:35 +02:00 by Artem · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-09 11:09, hash: 423435bd2e
Worked:

Short description of error
Curve edit handles disappear when the resulting curve is out of view.

Exact steps for others to reproduce the error
enter edit mode on curve and move your camera away from the deformed curve
sample.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-09 11:09, hash: `423435bd2e` Worked: **Short description of error** Curve edit handles disappear when the resulting curve is out of view. **Exact steps for others to reproduce the error** enter edit mode on curve and move your camera away from the deformed curve [sample.blend](https://archive.blender.org/developer/F7727983/sample.blend)
Author

Added subscriber: @Hickz

Added subscriber: @Hickz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, think something similar was reported before, let me dig that up...

Can confirm, think something similar was reported before, let me dig that up...
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

I think #57389 (Culling not working correctly when using array modifier) is related [seems like bounding box is not correct in our case here?].
I know @mont29 has all hands full, but maybe he is interested?

I think #57389 (Culling not working correctly when using array modifier) is related [seems like bounding box is not correct in our case here?]. I know @mont29 has all hands full, but maybe he is interested?
Author

Hello! So i created another task like this, but it was for meshes. https://developer.blender.org/T65893

Same thing, essentially, and i asked if it could get fixed for curves too in that task, but no answer followed. I'm pretty sure @Jeroen-Bakker was the one fixing it originally

Hello! So i created another task like this, but it was for meshes. https://developer.blender.org/T65893 Same thing, essentially, and i asked if it could get fixed for curves too in that task, but no answer followed. I'm pretty sure @Jeroen-Bakker was the one fixing it originally
Author

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by 71803f2c94

This issue was referenced by 71803f2c94b613c2ccd035fc5579e38b6e8fbcd8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-17 15:08:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69687
No description provided.